Changelog
=========

0.2 (unreleased)
----------------

- Nothing changed yet.


0.1 (2013-07-03)
----------------

- Initial release
  [lentinj]