@@ -4,7 +4,8 @@ Changelog
 0.2 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Ensure filters are sorted by title
+  [lentinj]
 
 
 0.1 (2013-07-03)
